fix stuck when mark

--- a/src/contents/content.less
+++ b/src/contents/content.less
@@ -1,7 +1,3 @@
-.content-view {
-  font-size: 30px;
-}
-
 .__mark {
   position: relative;
   margin: unset;
@@ -30,7 +26,7 @@
 }
 
 .__word_card {
-  display: none;
+  visibility: hidden;
   position: fixed;
   z-index: 10000;
   max-width: 400px;
